src/objects/cp_Session_Event__c.object
<CustomObject>
    <fields>
        <fullName>KnowledgeArticleID__c</fullName>
        <label>KnowledgeArticleID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchTerm__c</fullName>
        <label>SearchTerm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>cp_Session__c</referenceTo>
        <relationshipLabel>Session Events</relationshipLabel>
        <relationshipName>Session_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>load_portal</fullName>
                </value>
                <value>
                    <fullName>log_enhancement</fullName>
                </value>
                <value>
                    <fullName>view_cases</fullName>
                </value>
                <value>
                    <fullName>view_community</fullName>
                </value>
                <value>
                    <fullName>load_createcase</fullName>
                </value>
                <value>
                    <fullName>load_searchsuggestions</fullName>
                </value>
                <value>
                    <fullName>click_suggestion</fullName>
                </value>
                <value>
                    <fullName>create_case</fullName>
                </value>
                <value>
                    <fullName>click_foundsolution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hasResults__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasResults</label>
        <type>Checkbox</type>
    </fields>
    <label>Session Event</label>
    <nameField>
        <displayFormat>SE{00000000}</displayFormat>
        <label>Session Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Events</pluralLabel>
    <recordTypes>
        <fullName>Search_Event</fullName>
        <active>true</active>
        <label>Search Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Session_Event</fullName>
        <active>true</active>
        <label>Session Event</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>